# bot-git-itmo

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  generate_readme.py  pyproject.toml  requirements.txt
.github/workflows/: ci-and-reviewer.yml  code-agent-on-fix-requested.yml  code-agent-on-issue.yml
src/coding_agents/: cli.py  cli_code_agent.py  cli_readme.py  cli_reviewer.py  code_agent.py  config.py  git_ops.py  github_client.py  readme_generator.py  reviewer_agent.py
src/coding_agents/llm/: __init__.py  base.py  factory.py  openrouter_client.py  yandexgpt_client.py
tests/: test_code_agent.py  test_config.py  test_git_ops.py  test_reviewer_agent.py
